k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: woongkie-talkie
  labels:
    app.kubernetes.io/name: woongkie-talkie
